# holochain-nixpkgs

./: .gitignore  default.nix
.github/workflows/: build.yml
crates/update-holochain-versions/: Cargo.toml
crates/update-holochain-versions/src/: main.rs  nix_parser.rs
nix/: sources.json
nix/nvfetcher/: nvfetcher.toml  sources.nix
nix/nvfetcher/_sources/: .shake.database  generated.nix
overlays/: default.nix
